deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newsflickapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: newsflickapp
  template:
    metadata:
      labels:
        app: newsflickapp
    spec:
      containers:
        - name: newsflickapp-container
          image: newsflick:latest # 👈 must exactly match what you built
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
