service.yaml
apiVersion: v1
kind: Service
metadata:
  name: newsflickapp-service
spec:
  selector:
    app: newsflickapp
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
