ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newsflickapp-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: newsflick.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: newsflickapp-service
                port:
                  number: 80   # <-- should match Service port, not container port
